# AASD_LAB4

./: CMakeLists.txt  experiment.xlsx
include/: SearchTree.h  experiment.h  task.h
src/: SearchTree.cc  main.cc
